{feat} - user profile check api \n #18
